refactoring, swap tasks within the parent, added confirmed dialog