@@ -1,7 +1,7 @@
 package com.PMVaadin.PMVaadin.Services;
 
-import com.PMVaadin.PMVaadin.Entities.ProjectTask;
-import com.PMVaadin.PMVaadin.Entities.ProjectTaskImpl;
+import com.PMVaadin.PMVaadin.Entities.ProjectTask.ProjectTask;
+import com.PMVaadin.PMVaadin.Entities.ProjectTask.ProjectTaskImpl;
 import com.PMVaadin.PMVaadin.ProjectStructure.*;
 import com.PMVaadin.PMVaadin.Repositories.ProjectTaskRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -34,7 +34,7 @@ public class ProjectTaskServiceImpl implements ProjectTaskService {
     }
 
     @Override
-    public TreeItem<ProjectTask> getTreeProjectTasks() throws Exception {
+    public TreeItem<ProjectTask> getTreeProjectTasks() {
 
         List<ProjectTask> projectTasks = projectTaskRepository.findAllByOrderByLevelOrderAsc();
         //TreeProjectTasks treeProjectTasks = new TreeProjectTasksImpl();
@@ -47,10 +47,19 @@ public class ProjectTaskServiceImpl implements ProjectTaskService {
     }
 
     @Override
-    public ProjectTask saveTask(ProjectTask projectTask) throws Exception {
+    public ProjectTask saveTask(ProjectTask projectTask) {
+
+        // Validate parent existence
+        Integer parentId = projectTask.getParentId();
+        if (parentId != null) {
+            Optional<ProjectTask> foundParentValue = projectTaskRepository.findById(projectTask.getParentId());
+            ProjectTask foundParent = foundParentValue.orElse(null);
+            if (foundParent == null)
+                throw new StandardError("Unable to persist object. Parent of task don't exist. Update project and try again.");
+        }
 
         if (projectTask.isNew()) {
-            Integer parentId = projectTask.getParentId();
+            parentId = projectTask.getParentId();
             Integer levelOrder;
             if (parentId == null) {
                 levelOrder = projectTaskRepository.findMaxOrderIdOnParentLevelWhereParentNull();
@@ -60,13 +69,14 @@ public class ProjectTaskServiceImpl implements ProjectTaskService {
             if (levelOrder == null) levelOrder = 0;
             projectTask.setLevelOrder(++levelOrder);
         } else {
+            if (projectTask.getId().equals(projectTask.getParentId()))
+                throw new StandardError("Unable to persist object. Update project and try again.");
             Optional<ProjectTask> foundValue = projectTaskRepository.findById(projectTask.getId());
             ProjectTask foundTask = foundValue.orElse(null);
-            if (foundTask == null) throw new Exception("Incorrect data. Update project and try again.");
+            if (foundTask == null) throw new StandardError("Unable to persist object. Update project and try again.");
+            if (!foundTask.getVersion().equals(projectTask.getVersion()))
+                throw new StandardError("Unable to persist object. Object was changed a another user. Update project and try again.");
         }
-
-        if (projectTask.getId() != null && projectTask.getId().equals(projectTask.getParentId()))
-            throw new Exception("Incorrect data. Update project and try again.");
 
         return projectTaskRepository.save(projectTask);
 
@@ -75,12 +85,12 @@ public class ProjectTaskServiceImpl implements ProjectTaskService {
     @Override
     public void deleteTasks(List<? extends ProjectTask> projectTasks) {
 
-        List<Integer> parentIds = projectTasks.stream().map(ProjectTask::getParentId).toList();
+        List<?> parentIds = projectTasks.stream().map(ProjectTask::getParentId).toList();
         List<ProjectTask> projectTaskForDeletion = getProjectTasksToDeletion(projectTasks);
-        Map<Integer, Boolean> parentIdsForDeletion =
+        Map<?, Boolean> parentIdsForDeletion =
                 projectTaskForDeletion.stream().collect(Collectors.toMap(ProjectTask::getId, projectTask -> true));
-        parentIds = parentIds.stream().filter(integer -> Objects.isNull(parentIdsForDeletion.get(integer))).collect(Collectors.toList());
-        List<Integer> projectTaskIds = projectTaskForDeletion.stream().map(ProjectTask::getId).toList();
+        parentIds = parentIds.stream().filter(parentId -> Objects.isNull(parentIdsForDeletion.get(parentId))).collect(Collectors.toList());
+        List<?> projectTaskIds = projectTaskForDeletion.stream().map(ProjectTask::getId).toList();
 
         transactionalDeletionAndRecalculation(projectTaskIds, parentIds);
 
@@ -103,21 +113,21 @@ public class ProjectTaskServiceImpl implements ProjectTaskService {
         List<ProjectTask> projectTaskList = new ArrayList<>(projectTasks);
         projectTaskList.add(parent);
 
-        List<Integer> ids = projectTaskList.stream().map(ProjectTask::getId).collect(Collectors.toList());
+        List<?> ids = projectTaskList.stream().map(ProjectTask::getId).collect(Collectors.toList());
 
         Map<ProjectTask, ProjectTask> foundProjectTasks =
                 projectTaskRepository.findAllById(ids).stream().collect(Collectors.toMap(p -> p, p -> p));
 
         if (foundProjectTasks.size() != projectTaskList.size())
-            throw new IllegalStateException("Incorrect data. Should update project and try again.");
+            throw new StandardError("Incorrect data. Should update project and try again.");
 
         ProjectTask parentInBase = foundProjectTasks.get(parent);
 
         if (parentInBase == null)
-            throw new IllegalStateException("Incorrect data. Should update project and try again.");
+            throw new StandardError("Incorrect data. Should update project and try again.");
 
         if (!parent.getVersion().equals(parentInBase.getVersion()))
-            throw new IllegalStateException("The task " + parent + " has been changed by another user. Should update project and try again.");
+            throw new StandardError("The task " + parent + " has been changed by another user. Should update project and try again.");
 
         Map<ProjectTask, ProjectTask> parentsOfParentMap = entityManagerService.getParentsOfParent(parentInBase).stream().collect(
                 Collectors.toMap(p -> p, p -> p));
@@ -129,10 +139,10 @@ public class ProjectTaskServiceImpl implements ProjectTaskService {
         for (ProjectTask projectTask: projectTaskList) {
             if (parentsOfParentMap.get(projectTask) != null)
                 // Detected circle in tree
-                throw new IllegalStateException("Project structure has been changed. Should update project and try again.");
+                throw new StandardError("Project structure has been changed. Should update project and try again.");
             ProjectTask projectTasksInBase = foundProjectTasks.get(projectTask);
             if (!projectTask.getVersion().equals(projectTasksInBase.getVersion()))
-                throw new IllegalStateException("The task " + projectTask + " has been changed by another user. Should update project and try again.");
+                throw new StandardError("The task " + projectTask + " has been changed by another user. Should update project and try again.");
             parentIds.add(projectTask.getParentId());
             projectTask.setParentId(parent.getId());
             projectTask.setLevelOrder(++levelOrder);
@@ -142,12 +152,61 @@ public class ProjectTaskServiceImpl implements ProjectTaskService {
 
     }
 
-    private List<ProjectTask> recalculateForChildrenOfProjectTaskIds(List<Integer> parentIds) {
+    @Override
+    public List<ProjectTask> swapTasks(Map<ProjectTask, ProjectTask> swappedTasks) {
+
+        ProjectTask projectTask1 = null, projectTask2 = null;
+        for (Map.Entry<ProjectTask, ProjectTask> kv: swappedTasks.entrySet()) {
+            projectTask1 = kv.getKey();
+            projectTask2 = kv.getValue();
+            break;
+        }
+
+        List<Integer> ids = new ArrayList<>(2);
+        ids.add(projectTask1.getId());
+        ids.add(projectTask2.getId());
+
+        List<ProjectTask> projectTasksInBase = projectTaskRepository.findAllById(ids);
+
+        if (projectTasksInBase.size() != 2)
+            throw new StandardError("Roaming tasks do not exist. Should update project and try again.");
+
+        ProjectTask projectTask1InBase = null;
+        ProjectTask projectTask2InBase = null;
+        for (ProjectTask projectTask: projectTasksInBase) {
+            if (projectTask.equals(projectTask1)) projectTask1InBase = projectTask;
+            if (projectTask.equals(projectTask2)) projectTask2InBase = projectTask;
+        }
+
+        if (!projectTask1InBase.getVersion().equals(projectTask1.getVersion()) ||
+        !projectTask2InBase.getVersion().equals(projectTask2.getVersion())) {
+            throw new StandardError("Roaming tasks are changed another user. Should update project and try again.");
+        }
+
+        Integer levelOrder = projectTask1InBase.getLevelOrder();
+        projectTask1InBase.setLevelOrder(projectTask2InBase.getLevelOrder());
+        projectTask2InBase.setLevelOrder(levelOrder);
+
+        List<ProjectTask> savedTasks = projectTaskRepository.saveAll(projectTasksInBase);
+
+        for (ProjectTask projectTask: savedTasks) {
+            if (projectTask.equals(projectTask1)) projectTask.setWbs(projectTask2.getWbs());
+            if (projectTask.equals(projectTask2)) projectTask.setWbs(projectTask1.getWbs());
+        }
+
+        return savedTasks;
+
+//        return projectTaskRepository.replaceTasks(projectTask1.getId(), projectTask1.getVersion(),
+//                projectTask2.getId(), projectTask2.getVersion());
+
+    }
+
+    private List<ProjectTask> recalculateForChildrenOfProjectTaskIds(List<?> parentIds) {
 
         List<ProjectTask> foundProjectTasks;
 
         if (parentIds.stream().anyMatch(Objects::isNull)) {
-            List<Integer> findingParentIds = parentIds.stream().filter(Objects::nonNull).collect(Collectors.toList());
+            List<?> findingParentIds = parentIds.stream().filter(Objects::nonNull).collect(Collectors.toList());
             List<ProjectTaskImpl> foundProjectTasks1 =
                     projectTaskRepository.findByParentIdInWithNullOrderByLevelOrderAsc(findingParentIds);
             foundProjectTasks = foundProjectTasks1.stream()
@@ -163,7 +222,7 @@ public class ProjectTaskServiceImpl implements ProjectTaskService {
     }
 
     @Transactional
-    private void transactionalSaveAndRecalculation(List<ProjectTask> projectTaskList, List<Integer> parentIds) {
+    private void transactionalSaveAndRecalculation(List<ProjectTask> projectTaskList, List<?> parentIds) {
 
         projectTaskRepository.saveAll(projectTaskList);
         List<ProjectTask> savedElements = recalculateForChildrenOfProjectTaskIds(parentIds);
@@ -172,7 +231,7 @@ public class ProjectTaskServiceImpl implements ProjectTaskService {
     }
 
     @Transactional
-    private void transactionalDeletionAndRecalculation(List<Integer> projectTaskIds, List<Integer> parentIds) {
+    private void transactionalDeletionAndRecalculation(List<?> projectTaskIds, List<?> parentIds) {
 
         projectTaskRepository.deleteAllById(projectTaskIds);
         List<ProjectTask> savedElements = recalculateForChildrenOfProjectTaskIds(parentIds);
